Various text readability fixes

--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@
     border-color: var(--color-dark-medium);
 }
 
+.rc-message-box__typing-user {
+    color: var(--color-gray-light);
+}
+
 .rc-button:not(.rc-button--primary) {
     color: var(--color-gray-medium);
     border-color: var(--color-dark-medium);
@@ -122,6 +126,10 @@ textarea {
     background: var(--color-darkest);
 }
 
+.rc-modal__title {
+    color: var(--color-gray-medium);
+}
+
 .message.new-day::before,
 .flex-tab .message.new-day::before {
     background-color: var(--color-darkest);
@@ -162,7 +170,11 @@ textarea {
     background: var(--mention-link-background);
 }
 
-.contextual-bar {
+.contextual-bar__header {
     background: var(--color-darkest);
     box-shadow: 0 3px 1px 2px rgba(255, 255, 255, 0.1);
+}
+
+.role-tag {
+    color: var(--color-dark);
 }
